# pypci

./: .gitignore  README.md  fetch_ids.py  pyproject.toml
.github/: copilot-instructions.md
src/pypci/: __init__.py  __main__.py  pypci.py
src/pypci/backend/: __init__.py  device.py  driver.py  pci.py  util.py
src/pypci/data/: pci.class.json  pci.data  pci.data.json
src/pypci/pypciException/: __init__.py  pypciException.py
src/pypci/pypciUtil/: __init__.py  pypciUtil.py
