[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypci-ng"
version = "0.3.1"
description = "pypci, a pciutils-like library for fetching system PCI/PCI-E information but written mostly in python."
keywords = ["pci", "system information", "pciutils", "python", "lspci", "hardware information", "fetching", "pcie"]
authors = [
    {name = "Xiao Ran"}
]
maintainers = [
    {name = "Xiao Ran", email="xiaoran.007@icloud.com"},
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
urls = {homepage = "https://github.com/xiaoran007/pypci"}

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"pypci" = ["data/pci.ids", "data/*.json", "data/pci.data", "data/pci.class"]

[project.scripts]
pypci = "pypci.__main__:main"
